# jeebs-rs

./: Cargo.toml  README.md  jeebs-rs.code-workspace
apps/console-test/: Cargo.toml
apps/console-test/src/: main.rs
src/: error.rs  result.rs
