[package]
name = "Jeebs"
description = "Toolkit for Rapid Application Development"
homepage = "http://github.com/bfren/jeebs-rs"
documentation = "http://github.com/bfren/jeebs-rs"
repository = "http://github.com/bfren/jeebs-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
